# Library-Catalogue-Book-Search-System

./: .gitignore  GUIDE.md  README.md  run-backend.sh  setup-windows.bat  setup.sh
backend/: CMakeLists.txt  README.md
backend/src/: avl_tree.cpp  avl_tree.h  book.h  bst.cpp  bst.h  json_helper.h  library.h  main.cpp  simple_server.h
data/: books.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: library.ts
frontend/src/components/: BookCard.tsx  BookTable.tsx  Layout.tsx  Logo.tsx  Sidebar.tsx  StatCard.tsx  ThemeToggle.tsx  ToastContainer.tsx
frontend/src/context/: AppContext.tsx
frontend/src/pages/: AVLVisualizer.tsx  AddEditBook.tsx  BSTComparison.tsx  BooksPage.tsx  Dashboard.tsx  Landing.tsx  SearchPage.tsx
frontend/src/types/: index.ts
